# pcg

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  benchmark_results.txt  build.rs  custom-rust-toolchain  example_format_usage.rs  flake.nix  run_pcg_bin.sh  run_pcg_profiling_container.sh  run_pcg_server.sh  run_tests.sh  rust-toolchain  rust-toolchain-2025-07-21  shell.nix
.cursor/: environment.json
.github/workflows/: test.yml
modified-test-crates/encoding_rs-0.8.35/: Cargo.toml
modified-test-crates/encoding_rs-0.8.35/src/: shift_jis.rs
pcg-server/: Cargo.toml  README.md
pcg-server/src/: main.rs
pcg-server/templates/: index.html
scripts/: extract_failures.sh
src/: action.rs  error.rs  lib.rs  main.rs
src/borrow_checker/: impl.rs  mod.rs
src/borrow_pcg/: abstraction_graph_constructor.rs  borrow_pcg_capabilities.rs  borrow_pcg_edge.rs  borrow_pcg_expansion.rs  borrows_visitor.rs  coupling_graph_constructor.rs  domain.rs  edge_data.rs  engine.rs  has_pcs_elem.rs  latest.rs  mod.rs  path_condition.rs  region_projection.rs  region_projection_member.rs  unblock_graph.rs  util.rs
src/borrow_pcg/abstraction/: node.rs
src/borrow_pcg/action/: actions.rs  executed_actions.rs  mod.rs
src/borrow_pcg/borrow_checker/: impl.rs  mod.rs
src/borrow_pcg/edge/: abstraction.rs  block.rs  borrow.rs  coupling.rs  deref.rs  kind.rs  mod.rs  outlives.rs  region_projection_member.rs
src/borrow_pcg/edge/abstraction/: function.rs  loop.rs  mod.rs  type.rs
src/borrow_pcg/graph/: aliases.rs  frozen.rs  join.rs  loop_abstraction.rs  materialize.rs  mod.rs  mutate.rs
src/borrow_pcg/state/: mod.rs  obtain.rs
src/borrow_pcg/visitor/: function_call.rs  mod.rs  stmt.rs
src/borrows/: borrow_edge.rs  borrow_pcg_action.rs  borrow_pcg_capabilities.rs  borrow_pcg_edge.rs  borrow_pcg_expansion.rs  borrows_edge.rs  borrows_graph.rs  borrows_state.rs  borrows_visitor.rs  coupling_graph_constructor.rs  deref_expansion.rs  domain.rs  edge_data.rs  engine.rs  has_pcs_elem.rs  latest.rs  mod.rs  node.rs  path_condition.rs  region_abstraction.rs  region_projection.rs  region_projection_member.rs  unblock_graph.rs
src/borrows/borrows_graph/: aliases.rs  mod.rs
src/borrows/edge/: abstraction.rs  borrow.rs  kind.rs  mod.rs
src/combined_pcs/: domain.rs  engine.rs  mod.rs  node.rs  place_capabilities.rs  remove.rs  successor.rs
src/coupling/: coupled.rs  mod.rs
src/free_pcs/: mod.rs
src/free_pcs/impl/: bridge.rs  engine.rs  fpcs.rs  join_semi_lattice.rs  local.rs  mod.rs  place.rs  triple.rs  update.rs
src/free_pcs/impl/join/: data.rs  mod.rs  obtain.rs
src/free_pcs/results/: cursor.rs  repacks.rs
src/loop/: loop_set.rs  mod.rs
src/owned_pcg/: mod.rs
src/owned_pcg/impl/: bridge.rs  fpcs.rs  join_semi_lattice.rs  mod.rs  update.rs
src/owned_pcg/results/: cursor.rs  mod.rs  repacks.rs
src/pcg/: capabilities.rs  combined.rs  ctxt.rs  domain.rs  dot_graphs.rs  engine.rs  mod.rs  node.rs  obtain.rs  place_capabilities.rs  successor.rs  triple.rs
src/pcg/domain/: dataflow_stmt_phase.rs  eval_stmt_phase.rs  mod.rs  pcg.rs
src/pcg/visitor/: assign.rs  function_call.rs  mod.rs  obtain.rs  pack.rs  placeholder_bookkeeping.rs  stmt.rs  triple.rs  upgrade.rs
src/rustc_interface/: borrowck.rs  dataflow.rs  mod.rs
src/utils/: arena.rs  callbacks.rs  data_structures.rs  debug_info.rs  display.rs  domain_data.rs  eval_stmt_data.rs  incoming_states.rs  initialized.rs  iter.rs  join_lattice_verifier.rs  json.rs  liveness.rs  logging.rs  loop_usage.rs  mod.rs  mutable.rs  place.rs  place_snapshot.rs  redirect.rs  repacker.rs  root_place.rs  test.rs  validity.rs  visitor.rs
src/utils/const/: mod.rs
src/utils/place/: corrected.rs  maybe_old.rs  maybe_remote.rs  mod.rs  remote.rs
src/visualization/: bc_facts_graph.rs  dot_graph.rs  drawer.rs  graph_constructor.rs  grapher.rs  legend.rs  mir_graph.rs  mod.rs  node.rs
test-files/: 01_basic.rs  02_list_zero.rs  04_chunks.rs  05_is_xid_start.rs  09_punct.rs  101_conditional_reassign_borrow.rs  102_iterated_borrow.rs  102_loop.rs  103_function_w_reborrow.rs  104_impossible_fn.rs  105_loop.rs  106_swap.rs  107_swap2.rs  108_double_ref.rs  109_iterated_borrow.rs  110_iterated_borrow_invariant.rs  111_id.rs  111_oopsla_id.rs  112_oopsla_nested.rs  113_oopsla_lifetime_structs.rs  114_loop_oopsla.rs  115_prusti_bug.rs  116_jonas_loop.rs  117_polonius_jasper_bug.rs  118_polonius_jasper_bug_2.rs  119_oopsla_borrow_cond.rs  120_oopsla_get_nth_2.rs  121_oopsla_borrow_last.rs  121_oopsla_complexinvariant.rs  122_flowistry.rs  123_oopsla_mutwrapper.rs  124_jonas_walk.rs  126_hashbrown_occupied_error.rs  127_syn_tokenbuffer.rs  128_oopsla_borrow_last.rs  129_reborrow_shared.rs  12_jasper.rs  130_prusti_issue_27.rs  131_hashset_insert_unique_unchecked.rs  132_oopsla_loop_fix.rs  (+155 more)
tests/: 04_chunks.rs  06_cursor.rs  07_fmt.rs  08_parse_parens.rs  10_members.rs.wip  11_display.rs  13_heap_visitor.rs  14_serde_err.rs  17_entry.rs  18_slice.rs  19_lifetime_projection.rs  20_eager.rs  21_jasper2.rs  22_itoa_format.rs  23_lazy_poll.rs  24_style_render_reset.rs  25_parse_str.rs  27_aurel.rs  28_ranged_slice.rs.wi  31_prusti_timeout.rs  34_pair_into_value.rs  35_miniz_oxide_new_output_buffer.rs  37_loop.rs  38_regex_autonoma_iter_pattern_match_ids.rs  39_cfi.rs  40_object_archive.rs  44_rand_weighted_index.rs  bench_test_files.rs  run_all_tests.rs  selected_crates.rs  test_crates.rs  test_files.rs  test_utils.rs  top_crates.rs
tests/common/: mod.rs
tests/top-crates/: 2025-03-13.json
visualization/: index.html  package-lock.json  package.json
visualization/src/: api.ts  dot_graph.ts  effects.ts  mir_graph.ts  script.tsx  types.ts
visualization/src/components/: App.tsx  Assertions.tsx  BasicBlockNode.tsx  BasicBlockTable.tsx  BorrowCheckerGraphs.tsx  BorrowsAndActions.tsx  FunctionSelector.tsx  LatestDisplay.tsx  LegendButton.tsx  MirGraph.tsx  PCSGraphSelector.tsx  PathConditions.tsx  PathSelector.tsx  PcgActionsDisplay.tsx
(+6 files in other folders)
