[package]
name = "pcs"
version = "0.1.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2021"

[dependencies]
itertools = "0.12.0"
derive_more = "0.99"
dot = "0.1"
smallvec = { version = "^1.11", features = ["union", "const_new"] }
regex = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
polonius-engine = "0.13.0"
lazy_static = "1.4.0"
petgraph = "0.6.5"
bumpalo = "3.16.0"

[dev-dependencies]
reqwest = { version = "^0.11", features = ["blocking"] }
toml = "0.7"

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true

[[bin]]
name = "pcs_bin"
path = "src/main.rs"
