[package]
name = "pcs"
version = "0.1.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2021"
build = "build.rs"

[dependencies]
rustc_ast = {path = "/Users/zgrannan/.rustup/toolchains/nightly-2024-09-15-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_ast", optional = true}
rustc_data_structures = {path = "/Users/zgrannan/.rustup/toolchains/nightly-2024-09-15-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_data_structures", optional = true}
rustc_hir = {path = "/Users/zgrannan/.rustup/toolchains/nightly-2024-09-15-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_hir", optional = true}
rustc_index = {path = "/Users/zgrannan/.rustup/toolchains/nightly-2024-09-15-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_index", optional = true}
rustc_middle = {path = "/Users/zgrannan/.rustup/toolchains/nightly-2024-09-15-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_middle", optional = true}
rustc_target = {path = "/Users/zgrannan/.rustup/toolchains/nightly-2024-09-15-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_target", optional = true}
shell-escape = "0.1.5"
rustversion = "1.0"
itertools = "0.12.0"
derive_more = { version = "2.0.1", features = ["full"] }
dot = "0.1"
smallvec = { version = "^1.11", features = ["union", "const_new"] }
regex = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
polonius-engine = "0.13.0"
lazy_static = "1.4.0"
petgraph = "0.6.5"
bumpalo = "3.16.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
reqwest = { version = "^0.11", features = ["blocking"] }
toml = "0.7"

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true

[[bin]]
name = "pcs_bin"
path = "src/main.rs"
