[package]
name = "pcg"
version = "0.1.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2021"

[features]
memory_profiling = [
    "tikv-jemallocator",
    "axum",
    "tokio",
    "jemalloc_pprof",
]
visualization = [ "rustc_utils_2025_03_03" ]
debug_info = []
default = ["visualization"]

[dependencies]
# For RustRover
# rustc_ast = {path = "../.rustup/toolchains/nightly-2024-12-15-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_ast", optional = true}
# rustc_borrowck = {path = "../.rustup/toolchains/nightly-2024-12-15-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_borrowck", optional = true}
# rustc_mir_dataflow = {path = "../.rustup/toolchains/nightly-2024-12-15-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_mir_dataflow", optional = true}
# rustc_data_structures = {path = "../.rustup/toolchains/nightly-2024-12-15-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_data_structures", optional = true}
# rustc_hir = {path = "../.rustup/toolchains/nightly-2024-12-15-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_hir", optional = true}
# rustc_index = {path = "../.rustup/toolchains/nightly-2024-12-15-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_index", optional = true}
# rustc_middle = {path = "../.rustup/toolchains/nightly-2024-12-15-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_middle", optional = true}
# rustc_target = {path = "../.rustup/toolchains/nightly-2024-12-15-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_target", optional = true}

bit-set = "0.8.0"
bumpalo = "3.16.0"
derive_more = { version = "2.0.1", features = ["full"] }
dot = "0.1"
itertools = "0.12.0"
lazy_static = "1.4.0"
petgraph = "0.6.5"
# polonius-engine = "0.13.0"
regex = "1"
rustversion = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
shell-escape = "0.1.5"
smallvec = { version = "^1.11", features = ["union", "const_new"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tikv-jemallocator = { version = "0.6", features = ["profiling", "unprefixed_malloc_on_supported_platforms"], optional = true }
axum = { version = "0.7", features = ["multipart"], optional = true }
tokio = { version = "1.0", features = ["full", "rt-multi-thread"], optional = true }
jemalloc_pprof = { version = "0.6", optional = true }
rustc_utils_2024_12_15 = {version = "=0.12.0-nightly-2024-12-15", features = ["indexical", "test"], optional = true, package = "rustc_utils"}
rustc_utils_2025_03_03 = {version = "=0.13.0-nightly-2025-03-03", features = ["indexical", "test"], optional = true, package = "rustc_utils"}

[dev-dependencies]
reqwest = { version = "^0.11", features = ["blocking"] }
toml = "0.7"
rayon = "1.8"
chrono = "0.4"

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true

[[bin]]
name = "pcg_bin"
path = "src/main.rs"
required-features = ["visualization"]
